# nixconf

./: .gitignore  LICENSE  Makefile  README.md  boot.nix  configuration.nix  copy.configuration.nix  copy.nix  disko.nix  flake.nix  hardware-configuration.nix  home.nix  test.json  treefmt.toml
core/plasma/: default.nix
dotfiles/ags/: README.md  app.ts  app.tsx  calendar.js  config.js  flake.nix  heaptrack.test-app.184745.zst  result  style.scss  types  watch.sh
dotfiles/ags/widget/: CavaWidget.tsx  TextMarquee.tsx  cava.conf  example.tsx
dotfiles/cava/: cava.conf
dotfiles/fastfetch/: fastfetch-config.jsonc
dotfiles/quickshell/: AIColorGeneratorButton.qml  Bar.qml  BarsVisualizer.qml  CavaDataProcessor.qml  ClockWidget.qml  GeminiColorGenerator.qml  NowPlayingArt.qml  VisualizerContainer.qml  YTDataProcessor.qml  YoutubeConversionContainer.qml  config-minimal.yaml  config.yaml  shell.qml
dotfiles/quickshell/bar/: Bar.qml  BarsVisualizer.qml  CavaDataProcessor.qml  CircleProgress.qml  GetRam.qml  HyprlandWorkspaces.qml  NowPlayingArt.qml  WaveVisualizer.qml
dotfiles/quickshell/components/: AudioVisualizer.qml  ButtonLoadingEffect.qml  ButtonStateEffect.qml  ColorizedImage.qml  IconButton.qml  MetricPoller.qml
dotfiles/quickshell/config/: AppearanceConfig.qml  FileConfig.qml
dotfiles/quickshell/jobs/: ApplyAIColorJob.qml  BaseJob.qml  JobManager.qml  JobNotification.qml  JobQueue.qml  JobStatusWidget.qml  README.md  SaveAIColorFileJob.qml  YoutubeConversionJob.qml
dotfiles/quickshell/music-popup/: YTDataProcessor.qml
dotfiles/quickshell/services/: AIColorPicker.qml  Color.qml  ConfigManager.qml  Hyprland.qml  Job.qml  Kitty.qml  Mako.qml  Neovim.qml  QueueManager.qml  Swww.qml
dotfiles/scripts/: cava_startup.sh  color_finder.sh  convert_gif_to_webp.sh  list_desktop_applications.sh  quickshell_toggle.sh  read_mp3_image.py
dotfiles/scripts/ai_color_creator/: README.md  color_generator.py  generate_claude_wallpaper.sh  generate_wallpaper.sh  prompt.md
dotfiles/scripts/hybrid_colors/: hybrid_extract.sh
dotfiles/scripts/kmeans_colors/: kmeans.sh
dotfiles/scripts/process_spawner/: call_process.sh  process_spawner.py
dotfiles/scripts/yt_to_mp3/: create_mp3_metadata.sh  example.sh  example_metadata.sh  extract_mp3_image.sh  shell.nix  youtube_dl.sh  youtube_dl_preview.py
dotfiles/themes/: frieren-ethereal.json  frieren.nix
dotfiles/wofi/: style.css
nix/devShells/preview/: CMakeLists.txt  flake.nix  hyprland_ipc.cpp  hyprland_ipc.h  main.cpp
nix/gaming/: dwproton.nix  proton-ge.nix
nix/gaming/beyond-all-reason/: default.nix
nix/gaming/poe2/: awakened-poe2.nix  exiled-exchange.nix
nix/gaming/proton-ge/: default.nix
nix/hardware/: dualsense-edge.hwdb  dualsense-edge.nix
nix/home-manager/: home.nix
nix/joyboy/: configuration.nix  hardware-configuration.nix  stocks-trading.nix
nix/joyboy/modules/: default.nix
nix/overlays/: README.md  default.nix
nix/overlays/claude-code/: default.nix
nix/overlays/hyprland/: cursor-scale.patch  default.nix
nix/overlays/tela-icon-theme/: default.nix
nix/overlays/thunar/: default.nix  flake.nix
nix/overlays/vesktop/: default.nix  frieren-dance.patch
nix/overlays/yt-dlp/: default.nix
nix/patches/: README.md
nix/patches/thunar/: flake.nix  pipe.patch
nix/plugins/: README.md
nix/programs/kitty/: default.nix
nix/programs/neovim/: default.nix
nix/themes/: README.md
(+106 files in other folders)
